fix: layout issues

--- a/src/stories/ChatBotModal/ChatBotModal.css
+++ b/src/stories/ChatBotModal/ChatBotModal.css
@@ -6,3 +6,10 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
 }
+
+.chatboticon {
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  transform: translateX(-50%);
+}
