--- a/src/stories/CreateYourTrip/CreateYourTrip.css
+++ b/src/stories/CreateYourTrip/CreateYourTrip.css
@@ -1,20 +1,13 @@
 .background-container {
-  position: absolute;
+  /* position: absolute; */
   background-image: url('./assets/background.svg');
   background-repeat: no-repeat;
   background-size: cover;
   height: 155vh;
-  top: 50px;
+  /* top: 50px; */
   /* overflow-x: hidden; */
 }
 
 .content {
   /* padding-top: 80px; */
-}
-
-.chatboticon {
-  position: fixed;
-  right: 50px;
-  bottom: 20px;
-  transform: translateX(-50%);
 }
